FlightPath 6.x Changelog
========================

2021-10-20
  Made alteration to student_search so that if you have schools enabled, and search for a major within a school, you only see results for that
  school.  Also, fixed bug where if more than one school had the same major code, it was skipping over them.
  
  Fixed some malformed HTML in the user module causing placeholder text to look weird.
  
  Fixed a bug by adding permission to schools, to permit a user to edit users/students from a particular school.
  

2021-10-17
  Minor change in admin.module to fix typo.
  
  Implemented sending mass text messages function as part of the Engagements
  module.


2021-10-14
  Fixed bug in notify module, where the notification history table wasn't created.

  Added permissions on a per-phone number level for sending SMS messages.

  Engagements show which department/description the SMS was sent to or from on the main screen.


2021-10-13
  Made changes to engagements schema, so that we can track the SMS number a txt message was sent from, as well as the sms message id, in the table.

  Made change to content_versions table schema, so we have the option of saving a "log" message with the content.  This is accomplished by entering:
    $content->log = "some text here"; 
  before calling content_save($content);


2021-10-12
  Working on Engagements' ability to have multiple numbers on account they can receive SMS from.
  

2021-10-11
  Fixed bug in Engagements, where it was not showing attached files correctly from SMS.

  Changed how we handle incoming SMS messages to better catch "real time" messages.


2021-10-10
  Cleaned up code in various places.

  Fixed bug in Engagements where date_sent was not in correct format.  Also fixed old code which was causing a PHP syntax error for txt messages.

  Added function db_get_cwid_from_user_id() to db.inc file.
