@@ -353,14 +353,24 @@ input.disable-element,
   border-radius: 3px;
   max-width: 120px;
 }
+ 
+
+.textarea-maxlength-count {
+  display: block;
+  text-align: right;
+  font-size: 0.85em; 
+  color: #999; 
+}
+
+.textarea-maxlength-count .current-count {
+  color: black;
+  padding-right: 3px;
+}
 
 
-
-
-
-
-
-
+.textarea-maxlength-count .maxlength-chars {  
+  padding-left: 3px;
+}
 
 
 
